--- a/codes/www/drag-the-box/index.html
+++ b/codes/www/drag-the-box/index.html
@@ -10,6 +10,9 @@
     <audio id="dragPlaySound"><source src="drag.mp3" type="audio/mp3" /></audio>
     <audio id="dragPlaySound1"><source src="drag2.mp3" type="audio/mp3" /></audio>
     <audio id="dragPlaySound2"><source src="drag1.mp3" type="audio/mp3" /></audio>
+    <audio id="dragPlaySound3"><source src="drag3.mp3" type="audio/mp3" /></audio>
+    <audio id="dragPlaySound4"><source src="drag4.mp3" type="audio/mp3" /></audio>
+   
     <h1>Game</h1>
     <div class="coord-display" id="coordDisplay"></div>
     <div class="container">
