--- a/codes/www/drag-the-box/index.html
+++ b/codes/www/drag-the-box/index.html
@@ -17,6 +17,7 @@
     <div class="coord-display" id="coordDisplay"></div>
     <div class="container">
         <div class="box one" draggable="true"></div>
+        <div class="box one" draggable="true"></div>
     </div>
 </body>
 <script src="index.js"></script>
