Update code some more

--- a/codes/www/offline.html
+++ b/codes/www/offline.html
@@ -63,7 +63,7 @@
             opacity: 1 !important;
         }
     </style>
-    <title>DreamAi</title>
+    <title></title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFH-yKmfPyaa18_uYUwVWb7THj-b1hymE&v=weekly"></script>
 </head>
 <body>
@@ -71,8 +71,11 @@
         <h1 id="total_miles">Total Miles: <b><span id="stats_miles"><span></b></h1><br>
         <h1 id="mph">MPH: <b><span id="stats_mph"><span></b></h1>
     </div>
+
+    <div id='debug'></div>
     <script src="js/stats.js"></script>
     <script src="js/gps.js"></script>
+    <script src="js/jquery.min.js"></script>
 </body>
 
 </html>
