--- a/codes/www/offline.html
+++ b/codes/www/offline.html
@@ -72,9 +72,11 @@
         <h1 id="mph">MPH: <b><span id="stats_mph"><span></b></h1>
     </div>
 
+    <div id='map_canvas' style='width:200px;height:200px;'></div>
     <div id='debug'></div>
     <script src="js/stats.js"></script>
     <script src="js/gps.js"></script>
+    <script src="js/map.js"></script>
     <script src="js/jquery.min.js"></script>
 </body>
 
