progress on stats

--- a/codes/www/offline.html
+++ b/codes/www/offline.html
@@ -74,6 +74,8 @@
 
     <div id='map_canvas' style='width:200px;height:200px;'></div>
     <div id='debug'></div>
+    <div id='debug3'></div>
+    <div id='debug2'></div>
     <script src="js/stats.js"></script>
     <script src="js/gps.js"></script>
     <script src="js/map.js"></script>
