--- a/codes/www/offline.html
+++ b/codes/www/offline.html
@@ -68,8 +68,8 @@
 </head>
 <body>
     <div id="stats">
-        <h1 id="total_miles">Total Miles: <b><span id="stats_miles"><span></b></h1><br>
-        <h1 id="mph">MPH: <b><span id="stats_mph"><span></b></h1>
+        <h1>Distance: <b><span id="distance"><span>Mi</b></h1><br>
+        <h1>MPH: <b><span id="mph"><span></b></h1>
     </div>
 
     <div id='map_canvas' style='width:200px;height:200px;'></div>
