--- a/codes/www/index.html
+++ b/codes/www/index.html
@@ -70,6 +70,7 @@
     <div id="stats">
         <h1>Distance: <b><span id="distance"><span>Mi</b></h1><br>
         <h1>MPH: <b><span id="mph"><span></b></h1>
+        <h1>Marks: <b><span id="marks"><span></b></h1>
     </div>
 
     <div id='map_canvas' style='width:100%;height:200px;'></div>
