--- a/codes/www/index.html
+++ b/codes/www/index.html
@@ -77,7 +77,7 @@
     <div id='debug'></div>
     <div id='debug3'></div>
     <div id='debug2'></div>
-    <script src="cordova.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/catcher.js"></script>
     <script src="js/stats.js"></script>
