--- a/codes/www/index.html
+++ b/codes/www/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -67,6 +68,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFH-yKmfPyaa18_uYUwVWb7THj-b1hymE&v=weekly"></script>
 </head>
 <body>
+    <div id="deviceready"></div>
     <div id="stats">
         <h1>Distance: <b><span id="distance"><span>Mi</b></h1><br>
         <h1>MPH: <b><span id="mph"><span></b></h1>
@@ -77,7 +79,9 @@
     <div id='debug'></div>
     <div id='debug3'></div>
     <div id='debug2'></div>
-    <script type="text/javascript" src="cordova.js"></script>
+
+    <script src="cordova.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/catcher.js"></script>
     <script src="js/stats.js"></script>
