refactor add backend `

--- a/codes/www/index.html
+++ b/codes/www/index.html
@@ -9,7 +9,17 @@
     <meta name="color-scheme" content="light dark">
     
     <link rel="stylesheet" href="css/index.css">
-    
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type='module' src="js/fingerprint.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/catcher.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/stats.js"></script>
+    <script src="js/gps.js"></script>
+   
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFH-yKmfPyaa18_uYUwVWb7THj-b1hymE&v=weekly"></script>
 
     <style>
         /* CSS for centering and animating buttons */
@@ -64,7 +74,6 @@
         }
     </style>
     <title></title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFH-yKmfPyaa18_uYUwVWb7THj-b1hymE&v=weekly"></script>
 </head>
 <body>
     <div id="stats">
@@ -77,12 +86,6 @@
     <div id='debug'></div>
     <div id='debug3'></div>
     <div id='debug2'></div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/catcher.js"></script>
-    <script src="js/stats.js"></script>
-    <script src="js/gps.js"></script>
-    <script src="js/map.js"></script>
 </body>
 
 </html>
